--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ google_analytics:
 name: Mario Canalella
 title: My Trading Journal
 description: >
-  Barber is a blog theme for Jekyll built by Thomas Vaeth for Samesies using HTML, Sass, and JavaScript.
-url: https://mariocanalella.netlify.app/
+  This page serves as a platform for me to document my personal journey in the financial markets, as well as to provide valuable resources and information for fellow traders and enthusiasts.
+url: https://https://mc-mytradingjournal.netlify.app/
 twitter_username: thomasvaeth
 default_img: /assets/images/seo.jpg
 social:
