--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ name: Mario Canalella
 title: My Trading Journal
 description: >
   This page serves as a platform for me to document my personal journey in the financial markets, as well as to provide valuable resources and information for fellow traders and enthusiasts.
-url: https://https://mc-mytradingjournal.netlify.app/
+url: https://mc-mytradingjournal.netlify.app/
 twitter_username: thomasvaeth
 default_img: /assets/images/seo.jpg
 social:
